[package]
name = "rust-sns"
authors = ["NoixChou <shuto.tanaka.kos@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "2.2.0"
actix-cors = "0.5"
diesel = { version = "1.4", features = [ "mysql", "r2d2", "chrono", "uuid" ] }
serde = "1.0.125"
serde_derive = "1.0.125"
strum = "0.21.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
env_logger = "0.8.3"
validator = { version = "0.12", features = [ "derive" ] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
maplit = "1.0.2"